# rust-synaptic

./: .clippy.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .rustfmt.toml  CHANGELOG.md  COMPREHENSIVE_CODEBASE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FIXES_NEEDED.md  IMPROVEMENT_PLAN.md  Justfile  Makefile  PHASE5_SUMMARY.md  PR_DESCRIPTION.md  PR_PHASE3_CHECKPOINT.md  PR_PHASE3_CONTINUED.md  PR_PHASE3_MAIN.md  README.md  ROADMAP.md  ROADMAP_OLD.md  SECURITY.md  SUMMARY.md  TODO.md  clean_secrets.sh  comprehensive_todo_implementation.md  deny.toml  docker-compose.yml  init.sql
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  feature-complete-test.yml  quality.yml
assets/: memory_worker.js
benches/: analytics_performance.rs  ann_vs_bruteforce.rs  benchmark_config.toml  comprehensive_benchmarks.rs  comprehensive_performance_suite.rs  memory_retrieval_performance.rs  retrieval_comparison.rs  security_performance.rs
config/: prometheus.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  EMBEDDING_PROVIDERS_2024.md  PHASE5B_DOCUMENT_PROCESSING.md  PHASE5_MULTIMODAL_CROSSPLATFORM.md  QUICKSTART.md  TEST_ORGANIZATION.md  api_guide.md  architecture.md  code-quality-standards.md  comprehensive-testing-strategy.md  cross-platform-features.md  deployment-maintenance-guide.md  deployment.md  documentation-accuracy-audit.md  error_handling_guide.md  evaluation.md  logging_audit_report.md  logging_standards.md  memory-retrieval-optimization-design.md  performance-benchmarking.md  performance.md  platform-compatibility-guide.md  production-ready-patterns.md  security-reliability-review.md  storage-capabilities.md  testing_guide.md  user_guide.md
examples/: basic_usage.rs  combined_full_system.rs  complete_unified_system_demo.rs  complex_visualizations.rs  enhanced_memory_statistics.rs  intelligent_updates.rs  knowledge_graph_usage.rs  openai_embeddings_demo.rs  openai_embeddings_test.rs  phase1_semantic_search.rs  phase2_distributed_system.rs  phase3_analytics.rs  phase4_security_privacy.rs  phase5_basic_demo.rs  phase5_multimodal_crossplatform.rs  phase5b_document_demo.rs  real_integrations.rs  simple_intelligent_updates.rs  simple_security_demo.rs  simple_voyage_test.rs  synaptic_memory_operations.rs
profiling_reports/: profile_report_bottleneck_test_20260719_013150.txt  profile_report_bottleneck_test_20260719_024554.txt  profile_report_bottleneck_test_20260719_030724.txt  profile_report_bottleneck_test_20260719_031135.txt  profile_report_config_test_20260719_013150.txt  profile_report_config_test_20260719_024554.txt  profile_report_config_test_20260719_030724.txt  profile_report_config_test_20260719_031135.txt  profile_report_continuous_test_20260719_013150.txt  profile_report_continuous_test_20260719_024555.txt  profile_report_continuous_test_20260719_030725.txt  profile_report_continuous_test_20260719_031136.txt  profile_report_metrics_test_20260719_013150.txt  profile_report_metrics_test_20260719_024555.txt  profile_report_metrics_test_20260719_030724.txt  profile_report_metrics_test_20260719_031135.txt  profile_report_pause_test_20260719_013150.txt  profile_report_pause_test_20260719_024554.txt  profile_report_pause_test_20260719_030724.txt  profile_report_pause_test_20260719_031135.txt  profile_report_perf_test_20260719_013150.txt  profile_report_perf_test_20260719_024554.txt  profile_report_perf_test_20260719_030724.txt  profile_report_perf_test_20260719_031135.txt  profile_report_recommendations_test_20260719_013150.txt  profile_report_recommendations_test_20260719_024554.txt  profile_report_recommendations_test_20260719_030724.txt  profile_report_recommendations_test_20260719_031135.txt  profile_report_viz_test_20260719_013150.txt  profile_report_viz_test_20260719_024555.txt  profile_report_viz_test_20260719_030724.txt  profile_report_viz_test_20260719_031135.txt
scripts/: README.md  fetch_embedding_model.sh  pre-commit.sh  run_tests.sh  test-all-features.sh  test-runner.sh
src/: error.rs  error_handling.rs  lib.rs  logging.rs  phase5_basic.rs  phase5b_basic.rs
src/analytics/: behavioral.rs  intelligence.rs  mod.rs  performance.rs  predictive.rs  tests.rs  visualization.rs
src/cli/: commands.rs  completion.rs  config.rs  history.rs  mod.rs  output.rs  profiler.rs  shell.rs
src/cross_platform/: mobile.rs  mod.rs  offline.rs  sync.rs  wasm.rs  wasm_worker.rs
src/distributed/: events.rs  (+5 more)
tests/: advanced_manager_integration.rs  advanced_performance_optimization_tests.rs  advanced_theme_extraction_tests.rs  auth_tests.rs  backup_corruption.rs  batch_embedding_tests.rs  bitemporal_query_tests.rs  bitemporal_types_tests.rs  cache_synchronization.rs  candle_embedding_provider_tests.rs  checkpoint_restore_tests.rs  composite_scoring_tests.rs  comprehensive_error_handling_tests.rs  comprehensive_logging_tests.rs  comprehensive_optimization_tests.rs  context_assembly.rs  cross_platform_integration_tests.rs  data_processor_tests.rs  dense_idf_tests.rs  diff_analyzer_tests.rs  domain_adaptation_tests.rs  dp_property_tests.rs  embedding_providers.rs  enhanced_error_handling_tests.rs  enhanced_similarity_search_tests.rs  external_integrations_tests.rs  few_shot_learning_tests.rs  forgetting_tests.rs  graph_sync_integration.rs  heuristic_reasoner_tests.rs  homomorphic_encryption_tests.rs  indexed_retrieval_tests.rs  integration_tests.rs  intelligent_write_tests.rs  interactive_shell_tests.rs  inverted_index_tests.rs  knowledge_graph_tests.rs  lifecycle_tests.rs  llm_reasoner_tests.rs  logging_standards_tests.rs  (+54 more)
tools/eval/: Cargo.toml  fetch_datasets.sh
tools/eval/comparisons/: README.md  codex_openai_shim.py  graphiti_eval.py  graphiti_qa.py  mem0_codex_eval.py  mem0_eval.py
tools/eval/fixtures/: sample_conversations.json
tools/eval/src/: ablation.rs  dataset.rs  lib.rs  metrics.rs  qa.rs  runner.rs
tools/eval/tests/: ablation.rs  dataset_loader.rs  harness.rs  qa.rs
(+165 files in other folders)
