[package]
name = "synaptic"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Nicholas Ferguson <me@njf.io>"]
description = "Intelligent AI agent memory system with dynamic knowledge graphs and smart content updates"
license = "MIT"
repository = "https://github.com/njfio/rust-synaptic"
documentation = "https://docs.rs/synaptic"
readme = "README.md"
keywords = ["ai", "memory", "knowledge-graph", "agent", "intelligent"]
categories = ["data-structures", "algorithms", "science"]
resolver = "2"

# Linting configuration
#
# This is a large legacy crate. CI runs `cargo clippy --all-targets
# --all-features -- -D warnings`, which promotes every `warn` lint to a hard
# error. To keep that gate green without sweeping mechanical refactors, the
# pervasive but non-correctness rustc/clippy categories are relaxed to `allow`.
# Correctness-class lints remain at their default (deny/warn) levels, and the
# no-`unwrap()` and no-`println!` policies are enforced by dedicated CI grep
# gates rather than clippy.
[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"
dead_code = "warn"
# Several integration tests are gated behind opt-in cfg flags that are not
# declared as Cargo features (they are enabled manually with RUSTFLAGS when
# running those suites). Declare them as known cfgs so `unexpected_cfgs` does
# not fail the `-D warnings` clippy gate.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("search-scoring-tests"))',
    'cfg(feature, values("audio-memory"))',
    'cfg(feature, values("code-memory"))',
    'cfg(feature, values("image-memory"))',
    'cfg(feature, values("wasm-support"))',
    'cfg(feature, values("tesseract"))',
    'cfg(feature, values("whisper-rs"))',
] }

[lints.clippy]
# Safety lints. `unwrap_used`/`panic` are denied crate-wide; `.expect("reason")`
# (with a message stating the invariant that makes it safe) is the accepted
# replacement on paths that cannot fail. Tests, benches and examples carry
# file/module-level `#![allow]`s where unwrap/panic is legitimate test style.
# `todo`/`unimplemented` remain forbidden.
unwrap_used = "deny"
expect_used = "allow"
panic = "deny"
todo = "deny"
unimplemented = "deny"
# Replaces the former CI grep gate: library code must use `tracing`, not stdio.
# (Examples print by design; they carry file-level allows where needed.)
print_stdout = "deny"
print_stderr = "deny"

# The style/complexity/perf groups run at their default (warn) levels and are
# enforced by the `-D warnings` CI gate. pedantic/nursery stay `allow`: they
# are opt-in, noisy-by-design groups. Negative priority lets individual
# overrides above win.
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }

# clippy::style is otherwise enforced; these four style lints are individually
# relaxed with justification (finding counts as of the Phase 7 re-tightening):
# - upper_case_acronyms (18): domain acronyms (GDPR, HIPAA, SNARK, LRU, CPU…)
#   are public API names; renaming would be a breaking change for no clarity.
# - enum_variant_names (3): shared variant postfixes mirror domain terminology
#   (…Network, …Optimization, …Match) in public enums.
# - field_reassign_with_default (20): config structs in tests/setup are built
#   via Default::default() then adjusted field-by-field, which reads clearly.
# - needless_range_loop (13): numeric/matrix code where index-based loops
#   mirror the underlying math (dual indexing, in-place updates).
upper_case_acronyms = "allow"
enum_variant_names = "allow"
field_reassign_with_default = "allow"
needless_range_loop = "allow"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "1.3", optional = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Data structures
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = "2.0"
num-traits = "0.2"

# Storage
sled = "0.34"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json"], optional = true }

# Vector operations and similarity
ndarray = "0.15"
ordered-float = "4.0"

# Phase 1: Advanced AI Integration - Vector Embeddings
# Using simple TF-IDF implementation for baseline

# Phase 2: Distributed Architecture & Real-time Systems
tokio-stream = "0.1"
futures = "0.3"
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }
tonic-build = { version = "0.10", optional = true }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
redis = { version = "0.24", features = ["tokio-comp", "cluster"], optional = true }
# raft = { version = "0.7", optional = true }
# protobuf = { version = "3.4", optional = true }
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.13", optional = true }
brotli = { version = "3.4", optional = true }
flate2 = { version = "1.0", optional = true }
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
tokio-tungstenite = { version = "0.20", optional = true }
futures-util = { version = "0.3", optional = true }
# Myers' Diff Algorithm Implementation
imara-diff = "0.1"
similar = "2.4"

# Advanced Similarity and Search Algorithms
strsim = "0.11"

# Approximate Nearest Neighbor Search
hnsw_rs = "0.3"

# Advanced Theme Extraction and Topic Modeling
linfa = "0.7"
linfa-clustering = "0.7"
nalgebra = "0.32"
lz4_flex = "0.11"

# Concurrency (already included above)

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
rayon = "1.7"
hex = "0.4"
sha2 = "0.10"
rand = { version = "0.8.5", features = ["std_rng"] }
rand_distr = "0.4"
# Authentication (Task 4.7): argon2 password hashing, RFC 6238 TOTP MFA,
# constant-time comparison for API-key digests.
argon2 = "0.5.3"
totp-rs = "5.7"
subtle = "2.6"
aes-gcm = "0.10"
# Key hygiene (Task 4.6): zeroize in-memory secret key material on drop.
zeroize = { version = "1.8", features = ["derive"] }

# Homomorphic Encryption
tfhe = { version = "0.7", features = ["boolean", "shortint", "integer", "seeder_unix"], optional = true }

# Zero-Knowledge Proofs
bellman = { version = "0.14", optional = true }
bls12_381 = { version = "0.8", optional = true, features = ["zeroize"] }
# Poseidon hash over the BLS12-381 scalar field (native + circuit gadget);
# pinned to the 13.x line, which shares ff 0.13 / group 0.13 with bellman 0.14.
neptune = { version = "13.0", default-features = false, optional = true }
bellpepper-core = { version = "0.4", optional = true }
ff = { version = "0.13", optional = true }
typenum = { version = "1", optional = true }

# Real External Integrations
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
candle-core = { version = "0.8.1", optional = true }
candle-nn = { version = "0.8.1", optional = true }
candle-transformers = { version = "0.8.1", optional = true }
tokenizers = { version = "0.15", optional = true }
plotters = { version = "0.3", optional = true }
plotters-backend = { version = "0.3", optional = true }
image = { version = "0.24", features = ["png", "jpeg", "webp"], optional = true }
base64 = { version = "0.21", optional = true }
dotenvy = "0.15.7"

# Phase 5: Multi-Modal & Cross-Platform
# Image Processing & Computer Vision
imageproc = { version = "0.23", optional = true }
rusttype = { version = "0.9", optional = true }
tesseract = { version = "0.13", optional = true }
opencv = { version = "0.88", optional = true, default-features = false }

# Audio Processing
rodio = { version = "0.17", optional = true }
hound = { version = "3.5", optional = true }
whisper-rs = { version = "0.10", optional = true }
cpal = { version = "0.15", optional = true }
dasp = { version = "0.11", optional = true }

# Code Analysis
tree-sitter = { version = "0.20", optional = true }
tree-sitter-rust = { version = "0.20", optional = true }
tree-sitter-python = { version = "0.20", optional = true }
tree-sitter-javascript = { version = "0.20", optional = true }
syn = { version = "2.0", features = ["full", "extra-traits"], optional = true }
proc-macro2 = { version = "1.0", optional = true }

# WebAssembly Support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlElement"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

# Mobile & Cross-Platform
jni = { version = "0.21", optional = true }
ndk = { version = "0.7", optional = true }
swift-bridge = { version = "0.1", optional = true }

# Additional dependencies for Phase 5
md5 = { version = "0.7", optional = true }

# Phase 5B: Document Processing
# pdf = { version = "0.8", optional = true }
# docx = { version = "1.1", optional = true }
# markdown = { version = "1.0", optional = true }
pulldown-cmark = { version = "0.9", optional = true }
csv = { version = "1.3", optional = true }
# polars = { version = "0.35", features = ["lazy", "csv-file", "parquet", "json"], optional = true }
# calamine = { version = "0.22", optional = true }
walkdir = { version = "2.4", optional = true }
ignore = { version = "0.4", optional = true }
globset = { version = "0.4", optional = true }
mime_guess = { version = "2.0", optional = true }
encoding_rs = { version = "0.8", optional = true }
pdf-extract = "0.9"
zip = "0.6"
quick-xml = "0.31"
regex = "1.11.1"
fastrand = "2.3.0"
libm = "0.2.15"
rustyline = "16.0.0"
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
serde_yaml = "0.9.34"
dirs = "6.0.0"

# Observability (optional, gated behind the `observability` feature)
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { package = "opentelemetry_sdk", version = "0.24", optional = true, features = ["rt-tokio"] }
opentelemetry_otlp = { package = "opentelemetry-otlp", version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["async_tokio"] }
base64 = "0.21"
tracing-test = "0.2"
proptest = "1.5"

[features]
# Core Features (minimal dependencies) - Updated for development
default = ["core", "storage", "embeddings", "analytics", "compression", "dep:bincode", "base64"]
core = []
storage = ["file-storage", "memory-storage"]
file-storage = []
memory-storage = []
sql-storage = ["sqlx"]

# Essential Features
embeddings = []
vector-search = []
analytics = []
compression = ["lz4", "zstd", "brotli", "flate2"]

# Advanced Features
security = ["tfhe", "bellman", "bls12_381"]
homomorphic-encryption = ["tfhe"]
zero-knowledge-proofs = [
    "bellman",
    "bls12_381",
    "neptune",
    "bellpepper-core",
    "ff",
    "typenum",
]
# EXPERIMENTAL: incomplete distributed subsystem (not production Raft; realtime sync not implemented)
distributed-experimental = ["redis", "lz4"]
realtime = ["tokio-tungstenite", "futures-util"]
observability = ["dep:prometheus", "dep:opentelemetry", "dep:opentelemetry_otlp", "dep:opentelemetry_sdk"]

# External Integrations
ml-models = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
llm-integration = ["reqwest", "base64"]
visualization = ["plotters", "plotters-backend", "image", "base64"]
external-integrations = ["sql-storage", "ml-models", "llm-integration", "visualization"]

# Multi-Modal Processing
image-processing = ["image", "imageproc", "rusttype", "tesseract", "opencv"]
audio-processing = ["rodio", "hound", "whisper-rs", "cpal", "dasp"]
code-analysis = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-javascript", "syn", "proc-macro2"]
document-processing = ["pulldown-cmark", "mime_guess", "encoding_rs", "csv", "walkdir", "ignore", "globset"]
multimodal = ["image-processing", "audio-processing", "code-analysis", "document-processing"]

# Cross-Platform Support
wasm = ["wasm-bindgen", "js-sys", "web-sys", "wasm-bindgen-futures", "getrandom", "base64", "flate2"]
mobile = ["jni", "ndk", "swift-bridge"]
cross-platform = ["wasm", "mobile", "md5", "bincode"]

# Convenience Feature Groups
full = ["storage", "embeddings", "analytics", "security", "external-integrations", "multimodal"]
full-experimental = ["full", "distributed-experimental"]
minimal = ["core", "storage"]
base64 = ["dep:base64"]
bincode = ["dep:bincode"]

# Testing utilities
test-utils = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "phase3_analytics"
path = "examples/phase3_analytics.rs"
required-features = ["analytics"]

[[example]]
name = "real_integrations"
path = "examples/real_integrations.rs"

[[example]]
name = "combined_full_system"
path = "examples/combined_full_system.rs"
required-features = ["distributed-experimental", "external-integrations", "embeddings"]

[[example]]
name = "phase4_security_privacy"
path = "examples/phase4_security_privacy.rs"
required-features = ["security"]

[[example]]
name = "simple_security_demo"
path = "examples/simple_security_demo.rs"
required-features = ["security"]

[[example]]
name = "complete_unified_system_demo"
path = "examples/complete_unified_system_demo.rs"
required-features = ["security"]



# Test configuration
[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

# Feature-gated tests: these reference modules/types that only exist under
# specific (non-default) feature flags, so they are excluded from the default
# `cargo test` build and only compiled when their feature is enabled.
[[test]]
name = "cross_platform_integration_tests"
path = "tests/cross_platform_integration_tests.rs"
required-features = ["cross-platform"]

[[test]]
name = "wasm_adapter_tests"
path = "tests/wasm_adapter_tests.rs"
required-features = ["cross-platform"]

[[test]]
name = "zero_knowledge_tests"
path = "tests/zero_knowledge_tests.rs"
required-features = ["security"]

[[test]]
name = "storage_capability_tests"
path = "tests/storage_capability_tests.rs"
required-features = ["external-integrations"]

[[test]]
name = "logging_standards_tests"
path = "tests/logging_standards_tests.rs"
required-features = ["observability"]

[[test]]
name = "security_suite"
path = "tests/phase4_security_tests.rs"
required-features = ["security"]

[[test]]
name = "multimodal_suite"
path = "tests/phase5_multimodal_tests.rs"
required-features = ["multimodal"]

[[test]]
name = "document_suite"
path = "tests/phase5b_document_tests.rs"
required-features = ["document-processing"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
overflow-checks = true

[[bench]]
name = "memory_retrieval_performance"
harness = false

[[bench]]
name = "retrieval_comparison"
harness = false

[[bench]]
name = "comprehensive_performance_suite"
harness = false

[[bench]]
name = "analytics_performance"
harness = false
required-features = ["analytics"]

[[bench]]
name = "security_performance"
harness = false
required-features = ["security"]
