[package]
name = "synaptic-eval"
version = "0.1.0"
edition = "2021"
publish = false
description = "Evaluation harness for synaptic against LongMemEval-S and LoCoMo"
license = "MIT"

[dependencies]
synaptic = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
