[package]
name = "synaptic-eval"
version = "0.1.0"
edition = "2021"
publish = false
description = "Evaluation harness for synaptic against LongMemEval-S and LoCoMo"
license = "MIT"

[dependencies]
synaptic = { path = "../.." }
async-trait = "0.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
# Bounded-concurrency judge calls in `qa::run_qa` (stream::buffer_unordered).
futures = "0.3"
# LLM judge client (feature `llm-reasoning` only). Same reqwest line as the
# main crate's `llm-integration` feature.
reqwest = { version = "0.11", features = ["json"], optional = true }
tracing-subscriber = "0.3"

[features]
# Enables the real LLM judge (`LlmJudge`) for end-to-end QA accuracy.
# Off by default: without it QA accuracy is reported as "not run".
llm-reasoning = ["dep:reqwest", "synaptic/llm-reasoning"]
